# harbinger2

./: .gitignore  README.md  exercise.py  megatron.py  pyproject.toml  tasks.py
artifact/: api_review.md
src/harbinger/: __init__.py  __main__.py  annotation.py  cli.py  coerce.py  console.py  core.py  errors.py  model.py  registry.py  runner.py  signature.py  types.py  typs.py
src/harbinger/cli/: __init__.py  console.py  fmt.py  parser.py  present.py
tests/: test_annotation.py  test_coerce.py  test_console.py  test_model.py  test_signature.py
