[project]
name = "harbinger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Ravencentric", email = "78981416+Ravencentric@users.noreply.github.com" }
]
dependencies = [
  "rich>=15.0.0",
]

[project.scripts]
harbinger = "harbinger.__main__:main"

[dependency-groups]
dev = [
  "pytest>=9.0.3",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = [
  "-p",
  "no:cacheprovider",
]
testpaths = ["tests"]
