[project]
name = "harbinger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Ravencentric", email = "78981416+Ravencentric@users.noreply.github.com" }
]
dependencies = []

[project.scripts]
harbinger = "harbinger.cli:main"

[dependency-groups]
dev = [
  "pyrefly>=1.0.0",
  "pytest>=9.0.3",
  "ruff>=0.15.16",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.pyrefly]
preset = "strict"
project-includes = ["*.py", "src/**/*.py"]

[tool.pyrefly.errors]
# 3.10 doesn't have the @override decorator
missing-override-decorator = false
